[tool.poetry]
name = "tictoe"
version = "0.1.0"
description = "TicTacToe game in python"
authors = ["cheerio-pixel <frailin300@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pygame = "^2.0.1"


[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
debugpy = "^1.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
