[tool.poetry]
name = "tictoe"
version = "0.1.0"
description = "TicTacToe game in python"
authors = ["cheerio-pixel <frailin300@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyglet = "^1.5.21"


[tool.poetry.dev-dependencies]
debugpy = "^1.4.3"
flake8 = "^3.9.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
